trunk/Archive2/d3/fbd177c706348c/output

--------------

main.cpp:13:10: error: no viable conversion from 'istream' (aka 'basic_istream<char>') to 'bool'
{ return std::cin ; } // *** error: no implicit conversion from std::cin to bool
         ^~~~~~~~
main.cpp:16:10: error: no viable conversion from 'istream' (aka 'basic_istream<char>') to 'const void *'
{ return std::cin ; } // *** error: no implicit conversion from std::cin to const void*
         ^~~~~~~~
2 errors generated.

g++/libstdc++: compiled without errors


clang++/libstdc++: compiled without errors

